# vibe-kit

./: .gitattributes  .gitignore  AGENTS.md  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreateCommand.sh
.vibe-kit/instructions/: api-design.instructions.md  design.instructions.md  markdown.instructions.md  mcp-servers.instructions.md  response-style.instructions.md
backend/: .env.example  README.md  pyproject.toml  uv.toml
backend/app/: main.py
backend/tests/: test_helloworld.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
innovation-kit-repository/aurora/: INNOVATION_KIT.md  MANIFEST.yml
innovation-kit-repository/aurora-finetune/customizations/: Aurora Finetune.chatmode.md  aurora-finetune-innovation-kit.instructions.md  quick-start.instructions.md  quick-start.prompt.md
innovation-kit-repository/aurora-finetune/docs/: api-reference.md  aurora-finetuning-guide.md  available-models.md  beware.md  finetuning.md  form-of-a-batch.md  plugin-for-ecmwf.md  quick-start.md  tropical-cyclone-tracking.md  usage.md  uv-getting-started-features.md
innovation-kit-repository/aurora-finetune/initialization/: initialize_starter_code.py
innovation-kit-repository/bioemu/: INNOVATION_KIT.md  MANIFEST.yml
vibekit-cli/: .env.template  README.md  pyproject.toml
vibekit-cli/src/: __init__.py  assets.py  cli.py  github_repo.py  manifests.py  repo.py  state.py  versioning.py
vibekit-cli/tests/: conftest.py
(+163 files in other folders)
