[project]
name = "vibe-kit-backend"
version = "0.1.0"
description = "Minimal FastAPI backend with /helloworld endpoint"
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
